--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -6,8 +6,8 @@
 <dl class="dl-horizontal">
   <dt><strong><%= model_class.human_attribute_name(:name) %>:</strong></dt>
   <dd><%= @image.name %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:picture) %>:</strong></dt>
-  <dd><%= @image.picture %></dd>
+  <dt></strong></dt>
+  <dd><%= image_tag @image.picture.url if @image.picture? %></dd>
   <dt><strong><%= model_class.human_attribute_name(:user_id) %>:</strong></dt>
   <dd><%= @image.user_id %></dd>
 </dl>
