--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -6,10 +6,7 @@
 <dl class="dl-horizontal">
   <dt><strong><%= model_class.human_attribute_name(:name) %>:</strong></dt>
   <dd><%= @image.name %></dd>
-  <dt></strong></dt>
-  <dd><%= image_tag @image.picture.url if @image.picture? %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:user_id) %>:</strong></dt>
-  <dd><%= @image.user_id %></dd>
+  <dd><%= image_tag(@image.picture.url, size: "300x300") if @image.picture? %></dd>
 </dl>
 
 <%= link_to t('.back', :default => t("helpers.links.back")),
